# Disaster_Damage_Assessment

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PRD.md  README.md  environment.yml  packages.txt  pyproject.toml  requirements.txt  steps.txt
.streamlit/: config.toml
app/: report_generator.py  sample_loader.py  streamlit_app.py
app/sample_chips/: .gitkeep  chip_00_Sri-Lanka_534068.npz  chip_01_Pakistan_849790.npz  chip_02_India_900498.npz  chip_03_India_591317.npz  chip_04_India_747992.npz  chip_05_Paraguay_790830.npz  chip_06_USA_430764.npz  chip_07_Ghana_313799.npz  manifest.json
app/templates/: report.html
configs/: app.yaml  kerala_2018.yaml
docs/: deploy.md
notebooks/: 01_data_eda.ipynb  02_classical_dip_walkthrough.ipynb  03_ablation_analysis.ipynb  04_dl_training_and_eval.ipynb  05_analysis_and_severity.ipynb
reports/: final_report.md  lit_review.md  phase1_report.md  phase2_report.md  phase3_report.md  phase4_report.md  phase5_analysis.md  phase6_report.md  phase7_report.md  phase8_report.md  presentation_outline.md  qna.md  rubric_mapping.md
scripts/: build_kerala_ground_truth.py  build_report_pdf.py  build_sample_chips.py  colab_streamlit.py  download_sample_chips.py  download_sen1floods11.py  eval_unet.py  run_ablation.py  run_final_comparison.py  train_unet.py
src/: __init__.py
src/analysis/: error_analysis.py  infrastructure.py  quantify.py  severity.py  time_series.py
src/data/: aoi.py  gee_download.py  ground_truth.py  sar_download.py  sen1floods11_loader.py
src/dip/: __init__.py  change_detection.py  filters.py  indices.py  (+3 more)
tests/: conftest.py  test_analysis.py  test_data.py  test_dip.py  test_eval.py  test_full_pipeline.py  test_infrastructure.py  test_models.py  test_pipelines.py  test_preprocess.py  test_sample_loader.py  test_sar.py  test_smoke.py  test_time_series.py
(+21 files in other folders)
