[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dda-flood"
version = "0.1.0"
description = "Disaster Damage Assessment — Flood mapping from Sentinel-2 (Kerala 2018) using hybrid classical DIP + U-Net."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DDA Team" }]
keywords = ["remote-sensing", "flood-mapping", "sentinel-2", "digital-image-processing", "u-net"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "reports"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # comprehensions
  "RET",  # return
  "NPY",  # numpy-specific
]
ignore = [
  "E501",  # line-too-long (black handles)
  "B008",  # function-call-in-default-argument (common in typer/fastapi)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    notebooks
  | data
  | reports
)/
'''

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["notebooks/", "data/", "reports/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
markers = [
  "slow: tests that are slow (deselect with -m 'not slow')",
  "gpu: tests requiring a GPU",
  "network: tests requiring network access (GEE, etc.)",
]
